--- a/myExtensionsList.json
+++ b/myExtensionsList.json
@@ -14,6 +14,8 @@
     "brackets-indent-guides": true,
     "brackets-minify": true,
     "dnbard.lorem-pixel": true,
+    "gruehle.markdown-preview": true,
+    "alanhohn.markdown-toolbar": true,
     "brackets-material-dark-theme": true,
     "brackets-minimap": true,
     "alemonteiro.brackets-move-files": true,
@@ -21,6 +23,6 @@
     "fede91.brackets-preferences-ui": true,
     "brackets.swatcher": true,
     "mikaeljorhult.brackets-todo": true
-
   }
+
 }
